Go 1.18, OpenAPI docs
